include/gemini3d.h

extern void check_finite_output_C(void**, double**, double**, double*);
extern void maxcfl_C(double**, int*, void**, double*, double*);
extern void dateinc_C(double*, int*, double*);
extern void get_neutralperturb_interptype_C(void**,int*);
extern void precip_perturb_C(void**,void**,int*,void**,double*,double*,int*,double*);
extern void efield_perturb_nompi_C(void**,void**,int*,void**,double*,double*,int*,double*);
extern void interp3_C(double**,double**,double**,int*,int*,int*,double**,double**,int*,int*,
		double*,double*,double*,double**,double**,int*);
extern void interp2_C(double**,double**,int*,int*,double**,double**,int*,int*,double*,double*,double**,
		double**);
extern void get_it_C(int*);
extern void itinc_C();
extern void solflux_perturb_C(void**, void**, int*, void**, double*, double*, int*, double*);