src/libgemini_c.f90


  !> interface for computing cfl number
  subroutine maxcfl_C(fluidvarsC,xtype,xC,dt,maxcfl) bind(C, name="maxcfl_C")
    type(c_ptr), intent(inout) :: fluidvarsC
    integer(C_INT), intent(in) :: xtype
    type(c_ptr), intent(in) :: xC
    real(wp), intent(in) :: dt
    real(wp), intent(inout) :: maxcfl
    class(curvmesh), pointer :: x
    real(wp), dimension(:,:,:,:), pointer :: fluidvars

    x=>set_gridpointer_dyntype(xtype, xC)
    call c_f_pointer(fluidvarsC,fluidvars,[(lx1+4),(lx2+4),(lx3+4),(5*lsp)])
    call maxcfl_in(fluidvars,x,dt,maxcfl)
  end subroutine maxcfl_C


  !> return the type of neutral perturbation being used
  subroutine get_neutralperturb_interptype(cfgC,interptype) bind(C,name='get_neutralperturb_interptype_C')
    type(C_PTR), intent(in) :: cfgC
    integer(C_INT), intent(inout) :: interptype
    type(gemini_cfg), pointer :: cfg

    call c_f_pointer(cfgC,cfg)
    interptype=cfg%interptype
  end subroutine get_neutralperturb_interptype


  subroutine precip_perturb_C(cfgC, intvarsC, xtype,xC, dt,t,ymd,UTsec) bind(C, name='precip_perturb_C')
    type(C_PTR), intent(in) :: cfgC
    type(C_PTR), intent(inout) :: intvarsC
    integer(C_INT), intent(in) :: xtype
    type(C_PTR), intent(in) :: xC
    real(wp), intent(in) :: dt,t
    integer(C_INT), dimension(3), intent(in) :: ymd
    real(wp), intent(in) :: UTsec

    type(gemini_cfg), pointer :: cfg
    type(gemini_work), pointer :: intvars
    class(curvmesh), pointer :: x

    call c_f_pointer(cfgC, cfg)
    call c_f_pointer(intvarsC,intvars)
    x=>set_gridpointer_dyntype(xtype, xC)

    call precip_perturb_in(cfg,intvars,x,dt,t,ymd,UTsec)
    !call precip_perturb_in(dt,t,cfg,ymd,UTsec,x,intvars)
  end subroutine precip_perturb_C


  subroutine efield_perturb_nompi_C(cfgC, intvarsC, xtype,xC, dt,t,ymd,UTsec) bind(C, name='efield_perturb_nompi_C')
    type(C_PTR), intent(in) :: cfgC
    type(C_PTR), intent(inout) :: intvarsC
    integer(C_INT), intent(in) :: xtype
    type(C_PTR), intent(in) :: xC
    real(wp), intent(in) :: dt,t
    integer(C_INT), dimension(3), intent(in) :: ymd
    real(wp), intent(in) :: UTsec

    type(gemini_cfg), pointer :: cfg
    type(gemini_work), pointer :: intvars
    class(curvmesh), pointer :: x

    call c_f_pointer(cfgC, cfg)
    call c_f_pointer(intvarsC,intvars)
    x=>set_gridpointer_dyntype(xtype, xC)

    call efield_perturb_nompi_in(cfg,intvars,x,dt,t,ymd,UTsec)
    !call precip_perturb_in(dt,t,cfg,ymd,UTsec,x,intvars)
  end subroutine efield_perturb_nompi_C


  !> update solar fluxes stored in intvars
  subroutine solflux_perturb_C(cfgC, intvarsC, xtype,xC, dt,t,ymd,UTsec) bind(C, name='solflux_perturb_C')
    type(C_PTR), intent(in) :: cfgC
    type(C_PTR), intent(inout) :: intvarsC
    integer(C_INT), intent(in) :: xtype
    type(C_PTR), intent(in) :: xC
    real(wp), intent(in) :: dt,t
    integer(C_INT), dimension(3), intent(in) :: ymd
    real(wp), intent(in) :: UTsec

    type(gemini_cfg), pointer :: cfg
    type(gemini_work), pointer :: intvars
    class(curvmesh), pointer :: x

    call c_f_pointer(cfgC, cfg)
    call c_f_pointer(intvarsC,intvars)
    x=>set_gridpointer_dyntype(xtype, xC)

    call solflux_perturb_in(cfg,intvars,x,dt,t,ymd,UTsec)
  end subroutine solflux_perturb_C


  !> call gemini's internal interpolation code; note that input data are assumed to include ghost cells
  subroutine interp3_C(xC,yC,zC,mx,my,mz,qC,auxC,meqn,maux,xi,yi,zi,qiC,auxiC,interptype) bind(C,name='interp3_C')
    type(C_PTR), intent(in) :: xC,yC,zC
    integer(C_INT), intent(in) :: mx,my,mz
    type(C_PTR), intent(in) :: qC,auxC
    integer(C_INT), intent(in) :: meqn,maux
    real(wp), intent(in) :: xi,yi,zi
    type(C_PTR), intent(inout) :: qiC,auxiC
    integer(C_INT), intent(in) :: interptype
    real(wp), dimension(:), pointer :: x,y,z
    real(wp), dimension(:,:,:,:), pointer :: q
    real(wp), dimension(:,:,:,:), pointer :: aux
    real(wp), dimension(:), pointer :: qi
    real(wp), dimension(:), pointer :: auxi

    call c_f_pointer(xC,x,[mx+4])
    call c_f_pointer(yC,y,[my+4])
    call c_f_pointer(zC,z,[mz+4])
    call c_f_pointer(qC,q,[mx+4,my+4,mz+4,meqn])
    call c_f_pointer(auxC,aux,[mx+4,my+4,mz+4,maux])
    call c_f_pointer(qiC,qi,[meqn])
    call c_f_pointer(auxiC,auxi,[maux])

    call interp3_in(x,y,z,q,aux,xi,yi,zi,qi,auxi,interptype)
  end subroutine interp3_C


  !> call gemini's internal interpolation code
  subroutine interp2_C(xC,yC,mx,my,qC,auxC,meqn,maux,rhoi,zi,qiC,auxiC) bind(C,name='interp2_C')
    type(C_PTR), intent(in) :: xC,yC
    integer(C_INT), intent(in) :: mx,my
    type(C_PTR), intent(in) :: qC,auxC
    integer(C_INT), intent(in) :: meqn,maux
    real(wp), intent(in) :: rhoi,zi
    type(C_PTR), intent(inout) :: qiC,auxiC

    real(wp), dimension(:), pointer :: x,y
    real(wp), dimension(:,:,:), pointer :: q
    real(wp), dimension(:,:,:), pointer :: aux
    real(wp), dimension(:), pointer :: qi
    real(wp), dimension(:), pointer :: auxi

    call c_f_pointer(xC,x,[mx+4])
    call c_f_pointer(yC,y,[my+4])
    call c_f_pointer(qC,q,[mx+4,my+4,meqn])
    call c_f_pointer(auxC,aux,[mx+4,my+4,maux])
    call c_f_pointer(qiC,qi,[meqn])
    call c_f_pointer(auxiC,auxi,[maux])

    call interp2_in(x,y,q,aux,rhoi,zi,qi,auxi)
  end subroutine interp2_C


  !> increment date and time arrays, this is superfluous but trying to keep outward facing function calls here.
  subroutine dateinc_C(dt,ymd,UTsec) bind(C, name="dateinc_C")
    real(wp), intent(in) :: dt
    integer(C_INT), dimension(3), intent(inout) :: ymd
    real(wp), intent(inout) :: UTsec

    call dateinc_in(dt,ymd,UTsec)
  end subroutine dateinc_C


  !> getter and incrementer for it variable (number of steps since start/restart)
  subroutine get_it_C(it) bind(C, name="get_it_C")   ! possibly not needed?
    integer(c_int), intent(inout) :: it

    it=get_it()
  end subroutine get_it_C
  subroutine itinc_C() bind(C, name="itinc_C")
    call itinc()
  end subroutine itinc_C


  subroutine check_finite_output_C(cfgC, fluidvarsC, electrovarsC, t) bind(C, name='check_finite_output_C')
    type(C_PTR), intent(in) :: cfgC
    type(C_PTR), intent(in) :: fluidvarsC, electrovarsC
    real(wp), intent(in) :: t

    type(gemini_cfg), pointer :: cfg
    real(wp), dimension(:,:,:,:), pointer :: fluidvars, electrovars

    call c_f_pointer(cfgC, cfg)
    call c_f_pointer(fluidvarsC,fluidvars,[(lx1+4),(lx2+4),(lx3+4),(5*lsp)])
    call c_f_pointer(electrovarsC,electrovars,[(lx1+4),(lx2+4),(lx3+4),(2*lsp+9)])

    call check_finite_output_in(cfg, fluidvars, electrovars, t)
  end subroutine check_finite_output_C
end module gemini3d_C
